--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- axios -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- vuecdn -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <!-- mycss -->
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
@@ -11,7 +15,14 @@
 <body>
 
     <div id="root">
-        
+        <h1>{{ title }}</h1>
+        <template>
+            <ul>
+                <li>{{ mails }}</li>
+                
+            </ul>
+        </template>
+        <!--v-for + v-if -->
     </div>
 
     <script src="js/main.js"></script>
